--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,17 @@ a:hover {
 /*
  * Objects
  */
+ 
+ .entry:not(:first-of-type)
+{
+    margin-top: 10px;
+}
 
+.glyphicon
+{
+    font-size: 12px;
+}
+ 
 .btn-default,
 .btn-default:hover,
 .btn-default:focus {
@@ -20,10 +30,6 @@ a:hover {
   text-shadow: none; /* Prevent inheritance from `body` */
   background-color: #fff;
   border: 1px solid #fff;
-}
-
-#result-message{
-  margin-bottom: 3px;
 }
 
 label{
@@ -44,10 +50,11 @@ html,
 body {
   height: 100%;
   background-color: #333;
-  background-image: url("img/FrontPage.jpg");
+  /*background-image: url("img/FrontPage.jpg");*/
   background-size: contain;
   background-size: 100%;
   background-repeat: no-repeat;
+  width: auto;
 }
 body {
   color: #fff;
